--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -35,8 +35,8 @@
 
     <com.example.castremotedisplay.MediaRouterButtonView
             android:id="@+id/media_route_button_view"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:gravity="center_vertical|center_horizontal"
             android:layout_centerInParent="true"
             custom:buttonText="@string/play"
