--- a/res/layout/media_router_button_view.xml
+++ b/res/layout/media_router_button_view.xml
@@ -15,7 +15,7 @@
 -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.app.MediaRouteButton
+    <androidx.mediarouter.app.MediaRouteButton
             android:id="@+id/mediaRouteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
