--- a/res/layout/second_screen_layout.xml
+++ b/res/layout/second_screen_layout.xml
@@ -23,7 +23,7 @@
         android:orientation="vertical"
         android:background="@drawable/background">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:paddingTop="20dp"
             android:layout_height="wrap_content"
